# x-algorithm

learning_guide/: README.md
learning_guide/en/: 01_system_overview.md  02_home_mixer_logic.md  03_phoenix_model.md  04_scoring_and_ranking.md  05_filtering_rules.md  06_run_ranker_analysis.md  README.md
learning_guide/zh/: 01_system_overview.md  02_home_mixer_logic.md  03_phoenix_model.md  04_scoring_and_ranking.md  05_filtering_rules.md  06_run_ranker_analysis.md  README.md
phoenix/: pyproject.toml
